--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p class="date-current">11 de jul</p>
                 <p class="hour-current">11:29</p>
             </button>
+            <img src="/assets/icons/Notification-panel/do-not-disturb-icon.png" alt="DO NOT DISTURB" draggable="false" width="15px" height="auto" class="icon-do-not-disturb">
         </div>
         <div class="right-components-section">
             <button class="setting-button">
@@ -43,7 +44,21 @@
         <div class="notifications-container">
             <div class="notification-panel">
                 <div class="notification-left-panel">
-                    <div class="scroll-section-panel"></div>
+                    <div class="scroll-section-panel">
+                        <div class="notification-bubble-section">
+                            <div class="cover-notification"></div>
+                            <div class="text-notification-section">
+                                <h3 class="title-notification">Title notification</h3>
+                                <p class="date-notification">Just now</p>
+                                <p class="description-notification">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="delete-button-notification-section">
+                                <button class="delete-notification-button">
+                                    <img src="/assets/icons/Notification-panel/delete-notification-button.png" alt="ICON DELETE NOTIFICATION">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="options-left-notifications">
                         <div class="do-not-disturb-section">
                             <p class="subtitle-do-not-disturb">Do Not Disturb</p>
